compiler/testData/diagnostics/tests/testsWithJava21/newListMethods.diag.txt
/newListMethods.kt:46:7: error: unresolved reference: getFirst
    x.getFirst()
      ^^^^^^^^
/newListMethods.kt:47:7: error: function invocation 'first()' expected
    x.first // synthetic property for getFirst()
      ^^^^^
/newListMethods.kt:49:7: error: unresolved reference: getLast
    x.getLast()
      ^^^^^^^
/newListMethods.kt:50:7: error: function invocation 'last()' expected
    x.last
      ^^^^
